# overlayX

./: .gitignore  CMakeLists.txt  README.md  advanced_overlay_agent_plan.md  imgui.ini  overlayx_config.json
controller/: CMakeLists.txt  TECHNICAL_DOC.md
controller/src/: main.cpp  main_bak.cpp
controller/src/app/: AppBackend.hpp  ControllerApp.hpp
controller/src/infrastructure/: JsonConfigRepository.hpp  NamedPipeServer.hpp
controller/src/qml/: CountdownPage.qml  DesignerPage.qml  HotkeysPage.qml  Main.qml  OverviewPage.qml  PresetsPage.qml  SettingsPage.qml  Sidebar.qml
controller/src/ui/: OverlayUI.hpp
core/include/: FileSystemUtils.hpp
core/include/entities/: OverlayConfig.hpp
core/include/interfaces/: IConfigRepository.hpp  IIPCClient.hpp  IIPCServer.hpp  IRenderer.hpp
engine/src/: main.cpp
engine/src/app/: EngineApp.hpp
engine/src/infrastructure/: NamedPipeClient.hpp  OverlayWindow.hpp  SpikeDetector.hpp
engine/src/rendering/: Direct2DRenderer.hpp
shared/include/: IPCProtocol.hpp
